--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	<script src="script.js" defer></script>
 </head>
 <body>
-	<canvas id="canvas"></canvas>
+	<canvas id="canvas" width="300" height="300"></canvas>
 </body>
 </html>
