new feature: remote

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 </head>
 <body>
 	<canvas id="canvas" width="300" height="300"></canvas>
+	<div class="btn-container">
+		<button class="btn btn-Right">Right</button>
+		<button class="btn btn-Left">Left</button>
+		<button class="btn btn-Up">Up</button>
+		<button class="btn btn-Down">Down</button>
+	</div>
 </body>
 </html>
