--- a/index.html
+++ b/index.html
@@ -9,11 +9,31 @@
 </head>
 <body>
 	<canvas id="canvas" width="300" height="300"></canvas>
-	<div class="btn-container">
-		<button class="btn btn-Right">Right</button>
-		<button class="btn btn-Left">Left</button>
-		<button class="btn btn-Up">Up</button>
-		<button class="btn btn-Down">Down</button>
+	<div class="controls">
+		<div class="controls-buttons">
+			<button class="controls-button" id="up">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+				  <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+				</svg>
+			</button>
+		</div>
+		<div class="controls-buttons">
+			<button class="controls-button" id="left">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+				  <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 15.75 3 12m0 0 3.75-3.75M3 12h18" />
+				</svg>
+			</button>
+			<button class="controls-button" id="down">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+				  <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 17.25 12 21m0 0-3.75-3.75M12 21V3" />
+				</svg>
+			</button>
+			<button class="controls-button" id="right">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+				  <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+				</svg>
+			</button>
+		</div>
 	</div>
 </body>
 </html>
