--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 	    </div>
 	    <div class="modal-body">
 	      <p>Total Points: <span id="total-english"></span></p>
-	      <p>مجموع امتیازات: <span id="total-persian"></span></p>
+	      <p>مجموع امتیازات: <span id="total-persian" style="direction: rtl;"></span></p>
 	    </div>
 	    <div class="modal-footer">
-	      <h3>Modal Footer</h3>
+	      <h3>رکورد شما: <span id="record" style="direction: rtl;">10</span></h3>
 	    </div>
 	  </div>
 	</div> 
