add new feature: record

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</button>
 		</div>
 	</div>
-	<button id="myBtn">Open Modal</button>
+	<!-- <button id="myBtn">Open Modal</button> -->
 	<div id="myModal" class="modal">
 	  <div class="modal-content">
 	    <div class="modal-header">
@@ -50,7 +50,7 @@
 	      <p>مجموع امتیازات: <span id="total-persian" style="direction: rtl;"></span></p>
 	    </div>
 	    <div class="modal-footer">
-	      <h3>رکورد شما: <span id="record" style="direction: rtl;">10</span></h3>
+	      <h3>رکورد شما: <span id="record" style="direction: rtl;"></span></h3>
 	    </div>
 	  </div>
 	</div> 
