--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
 	<title>Snake Game</title>
 	<link rel="stylesheet" href="themes/css/style.css">
 	<script src="themes/js/script.js" defer></script>
+
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-title" content="Snake Game">
+	<meta name="theme-color" content="#3498db">
+
+	<link rel="manifest" href="manifest.json">
+	<link rel="icon" href="snake.png">
+	<link rel="apple-touch-icon" href="snake.png">
+
+	<script>
+		//Service Worker
+		if ("serviceWorker" in navigator) {
+	    	navigator.serviceWorker
+	      	.register("ServiceWorker.js")
+	      	.then(function (registration) {
+	        	console.log("success load");
+	      	})
+	      	.catch(function (err) {
+	        	console.log(err);
+	      	});
+	   }
+	</script>
 </head>
 <body>
 	<canvas id="canvas" width="300" height="300"></canvas>
